<resources>
    <string name="app_name">Music</string>
    <string name="mix">Перемешать</string>
    <string name="fav">Избранное</string>
    <string name="playlists">Плейлисты</string>
    <string name="total_tracks">Кол-во треков:</string>
    <string name="track_title">Пример Текста</string>
    <string name="back_btn">Назад</string>
    <string name="time_start">0:00</string>
    <string name="time_stop">2:56</string>
    <string name="ok">Ok</string>
    <string name="permission_granted">Разрешение предоставлено</string>
    <string name="permission_denied">Разрешение отклонено</string>
    <string name="permission_required">Требуется разрешение</string>
    <string name="album">Альбом песни</string>
    <string name="min_15">15 минут</string>
    <string name="min_30">30 минут</string>
    <string name="min_60">60 минут</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>