<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp"
    android:padding="2dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/trackCover"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/vinyl"
        app:shapeAppearanceOverlay="@style/curved" />

    <TextView
        android:id="@+id/trackTitle"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_toStartOf="@id/duration"
        android:layout_toEndOf="@id/trackCover"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/track_title"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/albumTitle"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@id/duration"
        android:layout_toEndOf="@id/trackCover"
        android:text="@string/album"
        android:gravity="center_vertical"
        android:singleLine="true"/>
    <TextView
        android:id="@+id/duration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/time_start"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_marginHorizontal="5dp"/>

</RelativeLayout>