<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mix_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/mix"
                android:text="@string/mix"
                android:textAllCaps="false"
                android:textColor="@color/md_theme_dark_onTertiary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/fav_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/heart"
                android:text="@string/fav"
                android:textAllCaps="false"
                android:textColor="@color/md_theme_dark_onTertiary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/playlists_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/playlist"
                android:text="@string/playlists"
                android:textAllCaps="false"
                android:textColor="@color/md_theme_dark_onTertiary"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/total_tracks" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksListMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>