<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/min_15"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/sleep_timer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:paddingBottom="10dp"
            android:text="@string/min_15"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_30"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/sleep_timer" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:paddingBottom="10dp"
            android:text="@string/min_30"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_60"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/sleep_timer" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:paddingBottom="10dp"
            android:text="@string/min_60"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>